@@ -1,3 +1,8 @@
+2013-02-08  Corinna Vinschen  <corinna@vinschen.de>
+
+	* child_info.h (CURR_CHILD_INFO_MAGIC): Update.
+	(class child_info_fork): Drop extraneous semicolon.
+
 2013-02-04  Corinna Vinschen  <corinna@vinschen.de>
 
 	* fhandler_socket.cc (fhandler_socket::bind): Fix error code for
